--- a/style.css
+++ b/style.css
@@ -1,8 +1,4 @@
 
-
-
-
-
 .common-margin{
     margin-left: 180px;
     margin-right: 180px;
@@ -15,8 +11,6 @@
     border: none;
     border-radius: 35px;
 }
-
-
 
 /* nav section */
 .nav-container{
@@ -152,11 +146,11 @@
     font-size: 12px;
 }
 .game-box .hover{
-position: relative;
-bottom: 150px;
-text-align: center;
-opacity: 0;
-transition: .3s;
+   position: relative;
+   bottom: 150px;
+   text-align: center;
+   opacity: 0;
+   transition: .3s;
 }
 
 .game-box .hover:hover{
@@ -172,8 +166,8 @@ transition: .3s;
     margin-bottom: 100px;
 }
 .play-left h1{
- font-size: 35px;
- font-weight: 800;
+    font-size: 35px;
+    font-weight: 800;
 }
 .lal-play{
     color:#F948B2;
@@ -183,7 +177,7 @@ transition: .3s;
     font-weight: 400;
 }
 .play-right{
- margin-left:200px;
+    margin-left:200px;
 }
 .play-img-up{
     width: 370px;
@@ -248,7 +242,6 @@ ul li{
     grid-template-columns: repeat(5, 1fr);
     text-align: center;
     gap: 20px;
-
 }
 .gam-box img{
     width: 30px;
@@ -269,6 +262,65 @@ ul li{
     color: #F948B2;
 }
 
+/* footer section */
+.footer-container{
+ background-color: black;
+ padding-bottom: 100px;
+}
+.footer-head{
+display: flex;
+justify-content: center;
+align-items: center;
+gap: 15px;
+padding-top: 50px;
+}
+.footer-image img{
+    width: 80px;
+    height: auto;
+}
+.footer-title h1{
+    font-size: 30px;
+    color: #fff;
+}
+.footer-part-one ul{
+    display:grid;
+    grid-template-columns: repeat(6, 1fr);
+    margin: 0px 300px;
+}
+.footer-part-one li{
+    font-size: 22px;
+    color: #fff;
+}
+
+.footer-part-tow i{
+    color: #fff;
+}
+.footer-part-tow ul{
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    margin: 0 300px;
+}
+.footer-part-tow li{
+    font-size: 30px;
+    text-align: center;
+}
+
+.footer-end{
+    color: #fff;
+}
+.footer-end ul{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    margin: 50px 300px 0px 300px;
+}
+.footer-end li{
+    text-align: center;
+    font-weight: 100;
+}
+.footer-discript{
+    text-align: center;
+    font-weight: 300;
+}
 
 /* media query */
 /* mobile responsive */
@@ -349,11 +401,23 @@ ul li{
         margin: 50px 15px;
         grid-template-columns:repeat(3, 1fr)   
      }
+     .footer-part-one ul{
+        display:grid;
+        grid-template-columns: repeat(3, 1fr);
+        margin: 0px auto;
+        gap: 5px;
+    }
+    .footer-part-tow ul{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        margin: 0 auto;
+    }
+    .footer-end ul{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        margin:0 auto;
+    }
 }
-
-
-
-
 
 /* tablet device responsive */
 @media screen and (min-width:427px) and (max-width:769px) {
@@ -408,4 +472,20 @@ ul li{
         margin: 60px 120px;
         grid-template-columns: repeat(3, 1fr);
     }
+    .footer-part-one ul{
+        display:grid;
+        grid-template-columns: repeat(6, 1fr);
+        margin: 0px 50px;
+    }
+    .footer-part-tow ul{
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        margin: 0 auto;
+    }
+    .footer-end ul{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        margin:0 auto;
+    }
+
 }
